<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>xuan.cat</groupId>
    <artifactId>SyncStaticMapView</artifactId>
    <version>3.0.1</version>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>xuan.cat.syncstaticmapview.code.Index</mainClass> <!-- 主類名 -->
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>


    <repositories>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>

        <repository>
            <id>minecraft_environment</id>
            <url>http://xuancat.app:8081/repository/minecraft_environment/</url>
        </repository>
    </repositories>


    <dependencies>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>4.6.0</version>
        </dependency>


        <!-- 1.17 paper -->
        <dependency>
            <groupId>paper</groupId>
            <artifactId>1.17.1</artifactId>
            <version>259</version>
        </dependency>
        <dependency>
            <groupId>paper</groupId>
            <artifactId>1.17.1</artifactId>
            <version>259</version>
            <classifier>patched</classifier>
        </dependency>
        <!-- 1.17 spigot -->
        <!--        <dependency>-->
        <!--            <groupId>spigot</groupId>-->
        <!--            <artifactId>1.17.1</artifactId>-->
        <!--            <version>1</version>-->
        <!--        </dependency>-->

        <!-- 1.16 -->
        <dependency>
            <groupId>paper</groupId>
            <artifactId>1.16.5</artifactId>
            <version>775</version>
        </dependency>
        <dependency>
            <groupId>patched</groupId>
            <artifactId>1.16.5</artifactId>
            <version>r3.3</version>
        </dependency>

        <!-- 1.15 -->
        <dependency>
            <groupId>paper</groupId>
            <artifactId>1.15</artifactId>
            <version>387</version>
        </dependency>
        <dependency>
            <groupId>patched</groupId>
            <artifactId>1.15</artifactId>
            <version>r1</version>
        </dependency>

        <!-- 1.14 -->
        <dependency>
            <groupId>paper</groupId>
            <artifactId>1.14</artifactId>
            <version>243</version>
        </dependency>
        <dependency>
            <groupId>patched</groupId>
            <artifactId>1.14</artifactId>
            <version>r1</version>
        </dependency>
    </dependencies>
</project>